Fix linebreak in Support Modal h3 tag

--- a/src/scss/partials/_mediaPlayerModals.scss
+++ b/src/scss/partials/_mediaPlayerModals.scss
@@ -153,7 +153,7 @@
     margin-bottom: 1.125rem;
 
     h3 {
-      flex: 0 0 33%;
+      flex: 1;
       margin-bottom: 0;
     }
   }
